--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>February 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/freedom-house-report-02292024150218.html">Report: Freedom continued to erode in 2023</a></li>  
+<li><a href="https://www.rfa.org/english/news/myanmar/shan-nuclear-trafficking-02262024152313.html">Shan state leader denies nuclear trafficking links</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/zoo-panda-diplomacy-02232024131700.html">China to send giant pandas back to US</a></li>
 <li><a href="https://www.rfa.org/english/news/china/gallagher-taiwan-trip-02222024120642.html">In Taiwan, US lawmaker calls any Chinese invasion plans ‘foolish’</a></li>    
 <li><a href="https://www.rfa.org/english/news/myanmar/yakuza-nuclear-trafficking-02222024095736.html">Yakuza leader charged over Myanmar nuclear trafficking</a></li>  
