--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>February 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/tiktok-biotech-ban-03062024152424.html">US lawmakers introduce latest TikTok ban bill</a></li>
+<li><a href="https://www.rfa.org/english/news/china/army-spy-arrest-03082024100452.html">US Army analyst arrested for selling military secrets</a></li>
+<li><a href="https://www.rfa.org/english/news/uyghur/prisoners-congress-letter-03082024151556.html">US lawmakers call for release of Uyghur prisoners</a></li>
+</ul>  
+
+<p><b>February 2024</b></p>
+<ul>
 <li><a href="https://www.rfa.org/english/news/china/freedom-house-report-02292024150218.html">Report: Freedom continued to erode in 2023</a></li>  
 <li><a href="https://www.rfa.org/english/news/myanmar/shan-nuclear-trafficking-02262024152313.html">Shan state leader denies nuclear trafficking links</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/zoo-panda-diplomacy-02232024131700.html">China to send giant pandas back to US</a></li>
