--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>March 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/influence-2024-election-03112024165543.html">US intelligence: Beijing may try to influence 2024 election</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/tiktok-biotech-ban-03062024152424.html">US lawmakers introduce latest TikTok ban bill</a></li>
 <li><a href="https://www.rfa.org/english/news/china/army-spy-arrest-03082024100452.html">US Army analyst arrested for selling military secrets</a></li>
 <li><a href="https://www.rfa.org/english/news/uyghur/prisoners-congress-letter-03082024151556.html">US lawmakers call for release of Uyghur prisoners</a></li>
