--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>March 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/myanmar/rohingya-aid-spending-03282024175315.html">Rohingya activists call for more control of aid money</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/yellen-green-technology-03272024104304.html">US and China feud over subsidies for green tech</a></li>    
+<li><a href="https://www.rfa.org/english/news/vietnam/foreign-minister-washington-03262024104758.html">Vietnamese FM: President’s ouster doesn’t change much</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/hackers-state-security-03252024133355.html">US alleges massive Chinese state-backed hacking program</a></li>    
+<li><a href="https://www.rfa.org/english/news/uyghur/forced-organ-harvesting-03202024133851.html">Experts: China is sequencing Uyghur DNA for organ harvesting</a></li>    
+<li><a href="https://www.rfa.org/english/news/cambodia/sam-rainsy-washington-03192024132208.html">Sam Rainsy says West can still influence Cambodia</a></li>    
+<li><a href="https://www.rfa.org/english/news/cambodia/khmer-movement-democracy-03152024152651.html"></a>New Cambodian democracy group says it could ‘legitimize’ Hun Manet</li>  
+<li><a href="https://www.rfa.org/english/news/china/tiktok-ban-bill-03132024130021.html">TikTok ban bill passes US House</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/influence-2024-election-03112024165543.html">US intelligence: Beijing may try to influence 2024 election</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/tiktok-biotech-ban-03062024152424.html">US lawmakers introduce latest TikTok ban bill</a></li>
 <li><a href="https://www.rfa.org/english/news/china/army-spy-arrest-03082024100452.html">US Army analyst arrested for selling military secrets</a></li>
