--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 <li><a href="https://www.rfa.org/english/news/china/hackers-state-security-03252024133355.html">US alleges massive Chinese state-backed hacking program</a></li>    
 <li><a href="https://www.rfa.org/english/news/uyghur/forced-organ-harvesting-03202024133851.html">Experts: China is sequencing Uyghur DNA for organ harvesting</a></li>    
 <li><a href="https://www.rfa.org/english/news/cambodia/sam-rainsy-washington-03192024132208.html">Sam Rainsy says West can still influence Cambodia</a></li>    
-<li><a href="https://www.rfa.org/english/news/cambodia/khmer-movement-democracy-03152024152651.html"></a>New Cambodian democracy group says it could ‘legitimize’ Hun Manet</li>  
+<li><a href="https://www.rfa.org/english/news/cambodia/khmer-movement-democracy-03152024152651.html">New Cambodian democracy group says it could ‘legitimize’ Hun Manet</a>/li>  
 <li><a href="https://www.rfa.org/english/news/china/tiktok-ban-bill-03132024130021.html">TikTok ban bill passes US House</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/influence-2024-election-03112024165543.html">US intelligence: Beijing may try to influence 2024 election</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/tiktok-biotech-ban-03062024152424.html">US lawmakers introduce latest TikTok ban bill</a></li>
