--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>April 2024</b></p>
 <ul>
-<li><a href="https://www.rfa.org/english/news/china/internet-repression-exports-04172024133621.html"></a>Report: China is exporting digital control methods</li>    
-<li><a href="https://www.rfa.org/english/news/uyghur/congressional-uyghur-caucus-04162024163136.html"></a>US lawmakers relaunch Uyghur caucus</li>  
-<li><a href="https://www.rfa.org/english/news/southchinasea/biden-kishida-marcos-04112024101452.html"></a>Biden: US will defend Philippines if vessels are attacked</li>
-<li><a href="https://www.rfa.org/english/news/china/biden-kishida-summit-04102024151745.html"></a>With eyes on Beijing, US and Japan pledge stronger ties</li>
-<li><a href="https://www.rfa.org/english/news/pacific/aukus-japan-philippines-04082024114342.html"></a>Japan can aid lagging US defense industrial base: diplomat</li>
-<li><a href="https://www.rfa.org/english/news/pacific/aukus-defense-base-04052024130028.html"></a>US needs to share military secrets, Australian diplomat says</li> 
-<li><a href="https://www.rfa.org/english/news/china/janet-yellen-trip-04042024142553.html"></a>US Treasury secretary in China amid ‘overcapacity’ dispute</li>  
-<li><a href="https://www.rfa.org/english/news/china/aukus-kurt-campbell-04032024132355.html"></a>US committed to Australia nuclear subs deal, diplomat says</li>  
-<li><a href="https://www.rfa.org/english/news/china/xi-biden-call-04022024120008.html"></a>Xi and Biden hold first phone call in nearly 2 years</li>
+<li><a href="https://www.rfa.org/english/news/china/internet-repression-exports-04172024133621.html">Report: China is exporting digital control methods</a></li>    
+<li><a href="https://www.rfa.org/english/news/uyghur/congressional-uyghur-caucus-04162024163136.html">US lawmakers relaunch Uyghur caucus</a></li>  
+<li><a href="https://www.rfa.org/english/news/southchinasea/biden-kishida-marcos-04112024101452.html">Biden: US will defend Philippines if vessels are attacked</a></li>
+<li><a href="https://www.rfa.org/english/news/china/biden-kishida-summit-04102024151745.html">With eyes on Beijing, US and Japan pledge stronger ties</a></li>
+<li><a href="https://www.rfa.org/english/news/pacific/aukus-japan-philippines-04082024114342.html">Japan can aid lagging US defense industrial base: diplomat</a></li>
+<li><a href="https://www.rfa.org/english/news/pacific/aukus-defense-base-04052024130028.html">US needs to share military secrets, Australian diplomat says</a></li> 
+<li><a href="https://www.rfa.org/english/news/china/janet-yellen-trip-04042024142553.html">US Treasury secretary in China amid ‘overcapacity’ dispute</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/aukus-kurt-campbell-04032024132355.html">US committed to Australia nuclear subs deal, diplomat says</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/xi-biden-call-04022024120008.html">Xi and Biden hold first phone call in nearly 2 years</a></li>
 </ul>
 
 <p><b>March 2024</b></p>
