--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
       <h1>Alex Willemyns</h1>
       <p>
-Australian journalist in Washington DC. State Department correspondent for <a href="https://rfa.org">Radio Free Asia</a>. Before: <a href="https://morningconsult.com/author/awillemyns/">Morning Consult</a> geopolitics editor, <a href="http://vodenglish.news/">VOD English</a> co-founder and politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.
+Journalist in Washington DC. State Department correspondent for <a href="https://rfa.org">Radio Free Asia</a>. Before: <a href="https://morningconsult.com/author/awillemyns/">Morning Consult</a> geopolitics editor, <a href="http://vodenglish.news/">VOD English</a> co-founder and politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.
 </p>
     <p><b>Twitter</b>: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <b>Contact</b>: <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
   </div>
@@ -56,6 +56,12 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 
 <p><b>April 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/taiwan-independence-policy-04302024161211.html"></a>US diplomat: Official ties to Taiwan would ‘undermine’ peace</li>  
+<li><a href="https://www.rfa.org/english/news/china/blinken-wang-xi-04262024122707.html">Blinken meets Xi amid warning of ‘downward spiral’ in ties</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/blinken-shanghai-visit-04252024153747.html">Blinken begins China trip with light friction</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/blinken-tiktok-ban-04242024131412.html"></a>Biden signs TikTok ban bill</li>  
+<li><a href="https://www.rfa.org/english/news/myanmar/rohinya-ethnic-cleansing-04222024152550.html"></a>US report: ‘Ethnic cleansing’ of Rohingya took place last year</li>
+<li><a href="https://www.rfa.org/english/news/china/blinken-beijing-ukraine-04192024131610.html">Blinken to visit China amid claims about Russia support</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/internet-repression-exports-04172024133621.html">Report: China is exporting digital control methods</a></li>    
 <li><a href="https://www.rfa.org/english/news/uyghur/congressional-uyghur-caucus-04162024163136.html">US lawmakers relaunch Uyghur caucus</a></li>  
 <li><a href="https://www.rfa.org/english/news/southchinasea/biden-kishida-marcos-04112024101452.html">Biden: US will defend Philippines if vessels are attacked</a></li>
