--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 
 <p><b>April 2024</b></p>
 <ul>
-<li><a href="https://www.rfa.org/english/news/china/taiwan-independence-policy-04302024161211.html"></a>US diplomat: Official ties to Taiwan would ‘undermine’ peace</li>  
+<li><a href="https://www.rfa.org/english/news/china/taiwan-independence-policy-04302024161211.html">US diplomat: Official ties to Taiwan would ‘undermine’ peace</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/blinken-wang-xi-04262024122707.html">Blinken meets Xi amid warning of ‘downward spiral’ in ties</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/blinken-shanghai-visit-04252024153747.html">Blinken begins China trip with light friction</a></li>  
-<li><a href="https://www.rfa.org/english/news/china/blinken-tiktok-ban-04242024131412.html"></a>Biden signs TikTok ban bill</li>  
-<li><a href="https://www.rfa.org/english/news/myanmar/rohinya-ethnic-cleansing-04222024152550.html"></a>US report: ‘Ethnic cleansing’ of Rohingya took place last year</li>
+<li><a href="https://www.rfa.org/english/news/china/blinken-tiktok-ban-04242024131412.html">Biden signs TikTok ban bill</a></li>  
+<li><a href="https://www.rfa.org/english/news/myanmar/rohinya-ethnic-cleansing-04222024152550.html">US report: ‘Ethnic cleansing’ of Rohingya took place last year</a></li>
 <li><a href="https://www.rfa.org/english/news/china/blinken-beijing-ukraine-04192024131610.html">Blinken to visit China amid claims about Russia support</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/internet-repression-exports-04172024133621.html">Report: China is exporting digital control methods</a></li>    
 <li><a href="https://www.rfa.org/english/news/uyghur/congressional-uyghur-caucus-04162024163136.html">US lawmakers relaunch Uyghur caucus</a></li>  
