--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 
 <h2>Recent articles</h2>
 
+<p><b>May 2024</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/korea/it-workers-remote-jobs-sanctions-05162024153246.html">North Koreans worked remotely for American companies, US says</a></li> 
+<li><a href="https://www.rfa.org/english/news/china/taiwan-inauguration-biden-delegation-05152024105830.html">US to send delegation to Taiwan’s presidential inauguration</a></li> 
+<li><a href="https://www.rfa.org/english/news/china/biden-trump-tariffs-election-05142024143122.html">Biden unveils sweeping tariffs on Chinese goods</a></li> 
+<li><a href="https://www.rfa.org/english/news/china/artificial-intelligence-talks-geneva-05132024143855.html"></a>US, Chinese officials head to Geneva for AI talks</li> 
+<li><a href="https://www.rfa.org/english/news/china/sanctions-huawei-spy-balloon-05102024114144.html">US sanctions 37 Chinese tech firms over drones, spy balloons</a></li>
+<li><a href="https://www.rfa.org/english/news/cambodia/universal-human-rights-05082024143023.html">Cambodia and Vietnam defend their rights records</a></li> 
+<li><a href="https://www.rfa.org/english/news/pacific/aukus-pillar-2.html">US begins review process for key AUKUS pillar</a></li> 
+<li><a href="https://www.rfa.org/english/news/china/pew-americans-views-05022024110500.html">4 in 5 Americans have a negative view of China: survey</a></li>   
+</ul>
+  
 <p><b>April 2024</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/taiwan-independence-policy-04302024161211.html">US diplomat: Official ties to Taiwan would ‘undermine’ peace</a></li>  
