--- a/index.html
+++ b/index.html
@@ -54,12 +54,26 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 
 <h2>Recent articles</h2>
 
+<p><b>June 2024</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/china/five-eyes-daniel-duggan-air-force-training-06052024122406.html">Five Eyes nations say China is poaching Western ex-military</a></li> 
+<li><a href="https://www.rfa.org/english/news/china/tiananmen-congress-anniversary-commemoration-06042024134847.html">US lawmakers remember Tiananmen Square massacre</a></li>   
+<li><a href="https://www.rfa.org/english/news/uyghur/volkswagen-forced-labor-audit-msci-06032024133733.html">US lawmakers query credibility of Volkswagen forced labor audit</a></li> 
+</ul>
+  
 <p><b>May 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/hong-kong-visa-bans-05312024131724.html">US to issue visa bans for Hong Kong officials</a></li>
+<li><a href="https://www.rfa.org/english/news/china/cybercrime-covid-relief-botnet-05302024105110.html">Chinese ‘botnet’ admin arrested in Singapore</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/pattaya-cybercrime-covid-relief-billions-05292024112854.html">Chinese citizens stole ‘billions’ in COVID relief funds, US says</a></li>    
+<li><a href="https://www.rfa.org/english/news/cambodia/lloyd-austin-visit-china-05282024153845.html">Amid US flirtation, Cambodia stresses ‘steel’ ties to China</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/hong-kong-trade-offices-05242024140735.html">Hong Kong’s US offices should be closed, activists say</a></li>    
+<li><a href="https://www.rfa.org/english/news/uyghur/nury-turkel-sexual-harassment-resign-05202024153035.html">Uyghur rights activist resigns amid sexual harassment claims</a></li>  
+<li><a href="https://www.rfa.org/english/news/uyghur/bmw-volkswagen-jaguar-land-rover-forced-labor-05202024123253.html">US imported cars tied to Uyghur slave labor, Senate report says</a></li>  
 <li><a href="https://www.rfa.org/english/news/korea/it-workers-remote-jobs-sanctions-05162024153246.html">North Koreans worked remotely for American companies, US says</a></li> 
 <li><a href="https://www.rfa.org/english/news/china/taiwan-inauguration-biden-delegation-05152024105830.html">US to send delegation to Taiwan’s presidential inauguration</a></li> 
 <li><a href="https://www.rfa.org/english/news/china/biden-trump-tariffs-election-05142024143122.html">Biden unveils sweeping tariffs on Chinese goods</a></li> 
-<li><a href="https://www.rfa.org/english/news/china/artificial-intelligence-talks-geneva-05132024143855.html"></a>US, Chinese officials head to Geneva for AI talks</li> 
+<li><a href="https://www.rfa.org/english/news/china/artificial-intelligence-talks-geneva-05132024143855.html">US, Chinese officials head to Geneva for AI talks</a></li> 
 <li><a href="https://www.rfa.org/english/news/china/sanctions-huawei-spy-balloon-05102024114144.html">US sanctions 37 Chinese tech firms over drones, spy balloons</a></li>
 <li><a href="https://www.rfa.org/english/news/cambodia/universal-human-rights-05082024143023.html">Cambodia and Vietnam defend their rights records</a></li> 
 <li><a href="https://www.rfa.org/english/news/pacific/aukus-pillar-2.html">US begins review process for key AUKUS pillar</a></li> 
