--- a/index.html
+++ b/index.html
@@ -54,8 +54,24 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 
 <h2>Recent articles</h2>
 
+<p><b>July 2024</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/china/nato-summit-russia-defense-industry-07102024113455.html">NATO calls China ‘decisive enabler’ of Russia’s war in Ukraine</a></li>
+<li><a href="https://www.rfa.org/english/news/uyghur/de-minimis-loophole-forced-labor-07092024134336.html">US officials pledge to close forced-labor import loophole</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/cuba-spy-base-csis-report-07032024111056.html">US aims to ‘disrupt’ Chinese spy station in Cuba</a></li>
+<li><a href="https://www.rfa.org/english/news/china/chris-patten-hong-kong-xi-dictator-07012024141858.html">Xi is a ‘dictator’ who broke Hong Kong treaty, ex-governor says</a></li>
+</ul>ul>
+  
 <p><b>June 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/state-department-budget-cuts-06272024152613.html">US diplomats: Budget cuts would be ‘devastating’ and ‘deadly’</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/religious-freedom-report-arrests-06262024153945.html"></a>US: China still arresting ‘thousands’ each year for practicing faith</li>  
+<li><a href="https://www.rfa.org/english/news/vietnam/human-trafficking-report-china-06242024142717.html">Vietnam improves in US human trafficking report</a></li>
+<li><a href="https://www.rfa.org/english/news/southchinasea/asean-china-america-rivalry-06132024114203.html">ASEAN chief: Bloc won’t pick sides in US-China rivalry</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/kurt-campbell-regime-change-06122024152219.html">US doesn’t want ‘regime change’ in China, diplomat says</a></li>
+<li><a href="https://www.rfa.org/english/news/uyghur/forced-labor-entity-list-blacklisting-06112024122421.html">US blacklists 3 more Chinese firms for Uyghur slave labor</a></li>
+<li><a href="https://www.rfa.org/english/news/china/nuclear-weapons-aresenal-expansion-06102024110712.html">US and China spar over nuclear weapons build-up</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/kevin-rudd-taiwan-gray-zone-tactics-06072024130208.html">Rudd says China using ‘gray zone’ tactics against Taiwan</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/five-eyes-daniel-duggan-air-force-training-06052024122406.html">Five Eyes nations say China is poaching Western ex-military</a></li> 
 <li><a href="https://www.rfa.org/english/news/china/tiananmen-congress-anniversary-commemoration-06042024134847.html">US lawmakers remember Tiananmen Square massacre</a></li>   
 <li><a href="https://www.rfa.org/english/news/uyghur/volkswagen-forced-labor-audit-msci-06032024133733.html">US lawmakers query credibility of Volkswagen forced labor audit</a></li> 
