--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 <li><a href="https://www.rfa.org/english/news/uyghur/de-minimis-loophole-forced-labor-07092024134336.html">US officials pledge to close forced-labor import loophole</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/cuba-spy-base-csis-report-07032024111056.html">US aims to ‘disrupt’ Chinese spy station in Cuba</a></li>
 <li><a href="https://www.rfa.org/english/news/china/chris-patten-hong-kong-xi-dictator-07012024141858.html">Xi is a ‘dictator’ who broke Hong Kong treaty, ex-governor says</a></li>
-</ul>ul>
+</ul>
   
 <p><b>June 2024</b></p>
 <ul>
 <li><a href="https://www.rfa.org/english/news/china/state-department-budget-cuts-06272024152613.html">US diplomats: Budget cuts would be ‘devastating’ and ‘deadly’</a></li>  
-<li><a href="https://www.rfa.org/english/news/china/religious-freedom-report-arrests-06262024153945.html"></a>US: China still arresting ‘thousands’ each year for practicing faith</li>  
+<li><a href="https://www.rfa.org/english/news/china/religious-freedom-report-arrests-06262024153945.html">US: China still arresting ‘thousands’ each year for practicing faith</a></li>  
 <li><a href="https://www.rfa.org/english/news/vietnam/human-trafficking-report-china-06242024142717.html">Vietnam improves in US human trafficking report</a></li>
 <li><a href="https://www.rfa.org/english/news/southchinasea/asean-china-america-rivalry-06132024114203.html">ASEAN chief: Bloc won’t pick sides in US-China rivalry</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/kurt-campbell-regime-change-06122024152219.html">US doesn’t want ‘regime change’ in China, diplomat says</a></li>
