--- a/index.html
+++ b/index.html
@@ -54,8 +54,46 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 
 <h2>Recent articles</h2>
 
+<p><b>September 2024</b></p>
+<ul>  
+<li><a href="https://www.rfa.org/english/news/cambodia/mech-dara-imprisoned-sun-chanthol-10012024152724.html">Award-winning Cambodian journalist jailed for ‘incitement’</a></li> 
+</ul>  
+
+<p><b>September 2024</b></p>
+<ul> 
+<li><a href="https://www.rfa.org/english/news/china/zelensky-lula-ukraine-brazil-six-point-peace-plan-09252024110726.html">At UN, Zelensky rejects China-Brazil peace plan</a></li>    
+<li><a href="https://www.rfa.org/english/news/vietnam/to-lam-new-york-biden-un-general-assembly-09252024161301.html">Biden meets Vietnam’s president in New York</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/united-nations-reform-biden-guterres-unga-speech-09242024115205.html">World is stuck in ‘purgatory of polarity’: UN chief</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/explainer-what-is-unga-united-nations-09222024211419.html">What exactly is UNGA Week?</a></li>
+<li><a href="https://www.rfa.org/english/news/china/cecc-american-prisonors-unjustly-detained-09182024144515.html">Too many Americans ‘unjustly’ jailed in China, lawmakers say</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/asian-nato-japanese-prime-minister-kritenbrink-09172024132652.html">‘Too early’ for an Asian NATO: US official</a></li>
+<li><a href="https://www.rfa.org/english/news/uyghur/de-minimis-loophole-biden-executive-order-09162024124259.html">Uyghur activists welcome Biden’s call to limit ‘de minimis’ exemption</a></li>    
+<li><a href="https://www.rfa.org/english/news/uyghur/de-minimis-exception-loophole-slave-labor-09112024143748.html">US lawmakers ask Biden to end China trade ‘loophole’</a></li>  
+<li><a href="https://www.rfa.org/english/news/china/what-is-china-week-us-congress-28-bills-explainer-09092024123505.html"></a>What is ‘China Week’ at the US Congress?</li>    
+<li><a href="https://www.rfa.org/english/news/china/tariffs-harris-trump-biden-more-than-60-09042024142328.html">Trump’s and Harris’ differing proposals on Chinese tariffs</a></li>  
+</ul>  
+  
+<p><b>August 2024</b></p>
+<ul>
+<li><a href="https://www.rfa.org/english/news/korea/travis-king-desertion-guilty-pleas-court-martial-08272024111231.html">US soldier who entered North Korea will plead guilty</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/jake-sullivan-beijing-visit-wang-yi-08232024140317.html">Top White House official to visit China</a></li>      
+<li><a href="https://www.rfa.org/english/news/china/aukus-pillar-2-defense-base-itar-exemptions-08162024141351.html">US approves AUKUS defense sharing deal</a></li>    
+<li><a href="https://www.rfa.org/english/news/myanmar/rohingya-genocide-arakan-army-rakhine-08152024132242.html"></a>Attacks against Rohingyas now ‘worse than in 2017’</li>
+<li><a href="https://www.rfa.org/english/news/uyghur/slave-labor-uflpa-entity-list-exporters-ban-08082024133714.html">US blacklists five more Chinese firms over Uyghur slavery</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/tim-walz-vp-china-ties-teacher-june-4-1989-08062024151233.html"></a>Harris’ VP pick has extensive China ties</li>    
+<li><a href="https://www.rfa.org/english/news/china/apec-xi-san-francisco-attacks-transnational-repression-08022024104927.html">Protesters in US were attacked by Beijing-linked figures: report</a></li>
+</ul>  
+
 <p><b>July 2024</b></p>
 <ul>
+<li><a href="https://www.rfa.org/english/news/china/olympics-doping-swimming-congress-lawmakers-07302024114710.html">US lawmakers allege rampant Chinese Olympics doping</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/alaska-russian-bombers-arctic-competition-07252024114901.html">Chinese and Russian bomber jets intercepted near Alaska</a></li>   
+<li><a href="https://www.rfa.org/english/news/korea/hacker-reward-hospital-ransomware-07252024143325.html">US offers $10M reward for info on North Korean hacker</a></li>    
+<li><a href="https://www.rfa.org/english/news/myanmar/rohingya-seven-years-refugee-camps-07242024132344.html">Rohingya at risk of being forgotten, activists say</a></li>    
+<li><a href="https://www.rfa.org/english/news/laos/lloyd-austin-antony-blinken-asean-asia-trip-07222024125521.html">US secretaries of state and defense head to Asia</a></li>    
+<li><a href="https://www.rfa.org/english/news/china/blinken-wang-vientiane-laos-07192024142458.html"></a>Blinken to meet Chinese counterpart in Laos</li>   
+<li><a href="https://www.rfa.org/english/news/china/russia-sharing-american-weapons-information-07162024140432.html">Russia may have shared US arms info with China: lawmakers</a></li>    
+<li><a href="https://www.rfa.org/english/news/myanmar/rohingya-state-department-coordinator-envoy-07122024114024.html">Congress moves to create special US rep for Rohingya</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/nato-summit-russia-defense-industry-07102024113455.html">NATO calls China ‘decisive enabler’ of Russia’s war in Ukraine</a></li>
 <li><a href="https://www.rfa.org/english/news/uyghur/de-minimis-loophole-forced-labor-07092024134336.html">US officials pledge to close forced-labor import loophole</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/cuba-spy-base-csis-report-07032024111056.html">US aims to ‘disrupt’ Chinese spy station in Cuba</a></li>
