--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 <li><a href="https://www.rfa.org/english/news/china/asian-nato-japanese-prime-minister-kritenbrink-09172024132652.html">‘Too early’ for an Asian NATO: US official</a></li>
 <li><a href="https://www.rfa.org/english/news/uyghur/de-minimis-loophole-biden-executive-order-09162024124259.html">Uyghur activists welcome Biden’s call to limit ‘de minimis’ exemption</a></li>    
 <li><a href="https://www.rfa.org/english/news/uyghur/de-minimis-exception-loophole-slave-labor-09112024143748.html">US lawmakers ask Biden to end China trade ‘loophole’</a></li>  
-<li><a href="https://www.rfa.org/english/news/china/what-is-china-week-us-congress-28-bills-explainer-09092024123505.html"></a>What is ‘China Week’ at the US Congress?</li>    
+<li><a href="https://www.rfa.org/english/news/china/what-is-china-week-us-congress-28-bills-explainer-09092024123505.html">What is ‘China Week’ at the US Congress?</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/tariffs-harris-trump-biden-more-than-60-09042024142328.html">Trump’s and Harris’ differing proposals on Chinese tariffs</a></li>  
 </ul>  
   
@@ -78,9 +78,9 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 <li><a href="https://www.rfa.org/english/news/korea/travis-king-desertion-guilty-pleas-court-martial-08272024111231.html">US soldier who entered North Korea will plead guilty</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/jake-sullivan-beijing-visit-wang-yi-08232024140317.html">Top White House official to visit China</a></li>      
 <li><a href="https://www.rfa.org/english/news/china/aukus-pillar-2-defense-base-itar-exemptions-08162024141351.html">US approves AUKUS defense sharing deal</a></li>    
-<li><a href="https://www.rfa.org/english/news/myanmar/rohingya-genocide-arakan-army-rakhine-08152024132242.html"></a>Attacks against Rohingyas now ‘worse than in 2017’</li>
+<li><a href="https://www.rfa.org/english/news/myanmar/rohingya-genocide-arakan-army-rakhine-08152024132242.html">Attacks against Rohingyas now ‘worse than in 2017’</a></li>
 <li><a href="https://www.rfa.org/english/news/uyghur/slave-labor-uflpa-entity-list-exporters-ban-08082024133714.html">US blacklists five more Chinese firms over Uyghur slavery</a></li>    
-<li><a href="https://www.rfa.org/english/news/china/tim-walz-vp-china-ties-teacher-june-4-1989-08062024151233.html"></a>Harris’ VP pick has extensive China ties</li>    
+<li><a href="https://www.rfa.org/english/news/china/tim-walz-vp-china-ties-teacher-june-4-1989-08062024151233.html">Harris’ VP pick has extensive China ties</a></li>    
 <li><a href="https://www.rfa.org/english/news/china/apec-xi-san-francisco-attacks-transnational-repression-08022024104927.html">Protesters in US were attacked by Beijing-linked figures: report</a></li>
 </ul>  
 
