--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Journalist in Washington DC. State Department correspondent for <a href="https:/
 <li><a href="https://www.rfa.org/english/news/korea/hacker-reward-hospital-ransomware-07252024143325.html">US offers $10M reward for info on North Korean hacker</a></li>    
 <li><a href="https://www.rfa.org/english/news/myanmar/rohingya-seven-years-refugee-camps-07242024132344.html">Rohingya at risk of being forgotten, activists say</a></li>    
 <li><a href="https://www.rfa.org/english/news/laos/lloyd-austin-antony-blinken-asean-asia-trip-07222024125521.html">US secretaries of state and defense head to Asia</a></li>    
-<li><a href="https://www.rfa.org/english/news/china/blinken-wang-vientiane-laos-07192024142458.html"></a>Blinken to meet Chinese counterpart in Laos</li>   
+<li><a href="https://www.rfa.org/english/news/china/blinken-wang-vientiane-laos-07192024142458.html">Blinken to meet Chinese counterpart in Laos</a></li>   
 <li><a href="https://www.rfa.org/english/news/china/russia-sharing-american-weapons-information-07162024140432.html">Russia may have shared US arms info with China: lawmakers</a></li>    
 <li><a href="https://www.rfa.org/english/news/myanmar/rohingya-state-department-coordinator-envoy-07122024114024.html">Congress moves to create special US rep for Rohingya</a></li>  
 <li><a href="https://www.rfa.org/english/news/china/nato-summit-russia-defense-industry-07102024113455.html">NATO calls China ‘decisive enabler’ of Russia’s war in Ukraine</a></li>
