--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
 <style type="text/css">
   body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px; background: #fff;}
-  #content {width: 820px; margin: 0 auto;}
+  #content {width: 820px; margin: auto;}
   #content img {width: 800px; margin: 0;}
-  #about {padding: 60px 0px; border-bottom: 1px dotted #ccc;}
+  #about {padding: 0px 0px; border-bottom: none;}
   #headshot img {width: 170px; float:left; margin-right: 30px; border-radius: 50%;}
   #photos p {margin-bottom: 35px;}
   h1 {margin: 0; padding: 0; font-size: 32px; font-family: Barlow, sans-serif; font-weight: 700;}
@@ -50,7 +50,7 @@
 Journalist in Washington DC. State Department correspondent for <a href="https://rfa.org">Radio Free Asia</a>. Before: <a href="https://morningconsult.com/author/awillemyns/">Morning Consult</a> geopolitics editor, <a href="http://vodenglish.news/">VOD English</a> co-founder and politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.
 </p>
 
-    <p>See my stories for <a href="/rfa">Radio Free Asia</a>, articles from <<a href="/Cambodia">Cambodia</a> and <a href="/photographs">photos</a>.</p>
+    <p>See my stories for <a href="/rfa">Radio Free Asia</a>, articles from <a href="/Cambodia">Cambodia</a> and <a href="/photographs">photos</a>.</p>
     
     <p><b>Twitter</b>: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <b>Contact</b>: <a href="mailto:alex.willemyns@gmail.com">alex.willemyns@gmail.com</a></a></p>
   </div>
