--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
 <style type="text/css">
   body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px; background: #fff;}
-  #content {width: 820px; margin: 35% auto;}
+  #content {width: 820px; margin: 200px auto;}
   #content img {width: 800px; margin: 0;}
   #about {padding: 0px 0px; border-bottom: none;}
   #headshot img {width: 170px; float:left; margin-right: 30px; border-radius: 50%;}
