--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   
 <style type="text/css">
   body {font-family: Inconsolata, Helvetica, Arial, sans-serif; font-size: 16px; background: #fff;}
-  #content {width: 820px; margin: 200px auto;}
+  #content {width: 820px; margin: 0 auto;}
   #content img {width: 800px; margin: 0;}
-  #about {padding: 0px 0px; border-bottom: none;}
+  #about {padding: 60px 0px; border-bottom: none;}
   #headshot img {width: 170px; float:left; margin-right: 30px; border-radius: 50%;}
   #photos p {margin-bottom: 35px;}
   h1 {margin: 0; padding: 0; font-size: 32px; font-family: Barlow, sans-serif; font-weight: 700;}
