--- a/photographs/index.html
+++ b/photographs/index.html
@@ -18,6 +18,7 @@
   #headshot img {width: 170px; float:left; margin-right: 30px; border-radius: 50%;}
   #photos p {margin-bottom: 35px;}
   h1 {margin: 0; padding: 0; font-size: 32px; font-family: Barlow, sans-serif; font-weight: 700;}
+  h1 a {color: black; text-decoration: none;}
   h2 {font-size: 24px; margin-top: 35px; font-family: Barlow, sans-serif; font-weight: 700;}
   h2 a {color:black; text-decoration:none;}
   ul li {margin-bottom: 10px; list-style-type:square;}
@@ -45,7 +46,7 @@
   
   <div id="about">
     <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
-      <h1>Alex Willemyns</h1>
+      <h1><a href="/"Alex Willemyns</a></h1>
       <p>
 Australian journalist in Washington DC. State Department correspondent for <a href="https://rfa.org">Radio Free Asia</a>. Before: <a href="https://morningconsult.com/author/awillemyns/">Morning Consult</a> geopolitics editor, <a href="http://vodenglish.news/">VOD English</a> co-founder and politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.
 </p>
