--- a/rfa/index.html
+++ b/rfa/index.html
@@ -45,7 +45,7 @@
 <div id="content">
   
   <div id="about">
-    <div id="headshot"><img src="https://imgur.com/O85NjkB.jpg"></div>
+    <div id="headshot"><img src="https://i.imgur.com/bQXo8Ie.jpeg"></div>
       <h1><a href="/">Alex Willemyns</a></h1>
       <p>
 Australian journalist in Washington DC. State Department correspondent for <a href="https://rfa.org">Radio Free Asia</a>. Before: <a href="https://morningconsult.com/author/awillemyns/">Morning Consult</a> geopolitics editor, <a href="http://vodenglish.news/">VOD English</a> co-founder and politics editor at <a href="https://english.cambodiadaily.com/author/alex-willemyns/">The Cambodia Daily</a> and <a href="https://phnompenhpost.com/author/alex-willemyns/100560">Phnom Penh Post</a>.
