--- a/cambodia/index.html
+++ b/cambodia/index.html
@@ -52,7 +52,7 @@ Australian journalist in Washington DC. State Department correspondent for <a hr
 </p>
 <p>See my stories for <a href="/rfa">Radio Free Asia</a>, articles from <a href="/cambodia">Cambodia</a> and <a href="/photographs">photos</a>.</p>
     
-    <p><b>Twitter</b>: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <b>Contact</b>: <a href="mailto:willemynsa@rfa.org">willemynsa@rfa.org</a></a></p>
+    <p><b>Twitter</b>: <a href="http://twitter.com/alexwillemyns">@alexwillemyns</a> &bull; <b>Contact</b>: <a href="mailto:alex.willemyns@gmail.com">alex.willemyns@gmail.com</a></a></p>
   </div>
 
   <h2>Selected Cambodia stories</h2>  
